--- a/HelloWorldDemo/WebContent/WEB-INF/web.xml
+++ b/HelloWorldDemo/WebContent/WEB-INF/web.xml
@@ -3,11 +3,6 @@
   <display-name>HelloWorldDemo</display-name>
   <welcome-file-list>
     <welcome-file>hello.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
     <servlet-name>main</servlet-name>
@@ -16,5 +11,14 @@
   <servlet-mapping>
     <servlet-name>main</servlet-name>
     <url-pattern>/hello</url-pattern>
+  </servlet-mapping>
+  <!-- Login Servlet -->
+  <servlet>
+    <servlet-name>Login</servlet-name>
+    <servlet-class>com.satya.controler.LoginControler</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Login</servlet-name>
+    <url-pattern>/LoginControler</url-pattern>
   </servlet-mapping>
 </web-app>
