Understood the working principle of 1-Http request type 2-WebServer and applicationServer 3-Servlet Initalization Parameters and Context parameters 4-Servlet responce 5-Request Dispatching (ServletContext and ServletConfig) 6-Request Attribute 7-Http Basic

--- a/HelloWorldDemo/WebContent/WEB-INF/web.xml
+++ b/HelloWorldDemo/WebContent/WEB-INF/web.xml
@@ -21,4 +21,23 @@
     <servlet-name>Login</servlet-name>
     <url-pattern>/LoginControler</url-pattern>
   </servlet-mapping>
+   <!-- Login Servlet end -->
+    <!-- Test Servlet Start -->
+  <servlet>
+    <servlet-name>MainFirstServlet</servlet-name>
+    <servlet-class>com.satya.controler.MainFirstServlet</servlet-class>
+    <init-param>
+    <description>Application Name</description>
+    <param-name>app</param-name>
+    <param-value>DemoApp</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MainFirstServlet</servlet-name>
+    <url-pattern>/MainFirstServlet</url-pattern>
+  </servlet-mapping>
+  <context-param>
+  <param-name>mainapp</param-name>
+  <param-value>satyaMainApp</param-value>
+  </context-param>
 </web-app>
